--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 </head>
 
-<body class="">
+<body class="d-flex flex-column justify-content-between min-vh-100">
   <header class="text-center w-100 p-3 shadow">
     <h1>Papper scissors game</h1>
   </header>
@@ -38,18 +38,20 @@
 
 
     <!-- TODO od tego miejsca  -->
-    <div>
-      <p class="text-center"> Game result</p>
-      <p class="text-center">Your choise: <span class="" data-summary="your-choice">asd</span></p>
-      <p class="text-center">Computer choise: <span class=""  data-summary="ai-choice">asd</span></p>
-      <p class="text-center">Winner: <span class="" data-summary="who-win">asd</p>
+    <div class="container d-flex justify-content-around">
+      <div>
+        <p class="text-left"> Game result</p>
+        <p class="text-left">Your choise: <span class="" data-summary="your-choice"></span></p>
+        <p class="text-left">Computer choise: <span class=""  data-summary="ai-choice"></span></p>
+        <p class="text-left">Winner: <span class="" data-summary="who-win"></p>
     </div>
     <div>
-      <p class="text-center">Ladderboard</p>
-      <p class="numbers text-center">Number of games: <span>0</span></p>
-      <p class="wins text-center">Wins: <span>0</span></p>
-      <p class="looses text-center">Looses: <span>0</span></p>
-      <p class="draws text-center">Draws: <span>0</span></p>
+      <p class="text-left ">Ladderboard</p>
+      <p class="numbers text-left">Number of games: <span>0</span></p>
+        <p class="wins text-left">Wins: <span>0</span></p>
+        <p class="looses text-left">Looses: <span>0</span></p>
+        <p class="draws text-left">Draws: <span>0</span></p>
+      </div>
     </div>
   </main>
   <footer>
